--- a/XclusionZone-2023/Packages/manifest.json
+++ b/XclusionZone-2023/Packages/manifest.json
@@ -4,11 +4,13 @@
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.connect.share": "4.2.3",
+    "com.unity.ext.nunit": "1.0.6",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.2.0",
     "com.unity.terrain-tools": "5.0.1",
     "com.unity.test-framework": "1.1.33",
